# MAI_OOP

./: CMakeLists.txt  Makefile  run.cpp
header/: convertTimeTo24h.h
include/: Array.h  Three.h
src/: Array.cpp  Three.cpp  convertTimeTo24h.cpp  main.cpp
test/: test.cpp  tests.cpp
tests/: tests.cpp
